reworked .spoiler; compressed style.css a bit more; squashed some lil bugs

--- a/style.css
+++ b/style.css
@@ -17,42 +17,45 @@ p{font-size:1em;padding:5px;border-radius:5px}
 img{width:16em;height:auto}
 a{color:var(--accent);text-decoration-style:dashed}
 a:hover,a:focus-visible{text-decoration-style:solid}
-a:focus-visible{outline:var(--accent) solid 5px}
-button{user-select:none;box-sizing:border-box;border:solid var(--scol);border-width:0 0 6px;color:var(--scol);display:block;transition:.05s;font-size:1.25em}
+button{box-sizing:border-box;border:solid var(--scol);border-width:0 0 6px;color:var(--scol);display:block;transition:.05s;font-size:1.25em}
 button:hover,button:focus{border-width:2px 0 4px}
-button:focus{outline:var(--accent)solid 3px}
 button:active{border-width:6px 0 0}
 pre{font:1.5em andale mono, monospace}
 input[type=range]{accent-color:var(--accent);cursor:pointer}
 code{font-family:Monospace}
-a:focus-visible{outline-width:.2rem;outline-offset:.1em}
+a:focus-visible{outline-offset:4px}
 
 /* section dedicated to elements and classes with the same rules (grouping them together saves up space MOST of the time) */
 canvas,.pixelart{image-rendering:pixelated}
-button,img,.showcase canvas,.neon,.neonu,.card h2,hr,h1,.showcase,div.content,.palette,div.card,a,#img0bg,.tabl{border-radius:9px}
+button,img,.showcase canvas,.neon,.neonu,.card h2,hr,h1,.showcase,div.content,.palette,div.card,a,#img0bg,.tabl,.spoiler{border-radius:9px}
 h1,h2,#caption,.color,.center,.tag{text-align:center}
 button,.showcase,p{background:var(--tcol)}
 .img0,.modal,.center,.smol{margin:auto}
 .spoiler,#close,.color{cursor:pointer}
+button,.spoiler,#img0{user-select:none}
+button:focus-visible,.spoiler:focus-visible,a:focus-visible{outline:var(--accent)solid 4px}
 
 /* general classes */
 div.base{margin:2em auto;width:70%;position:relative}
 div.content{background:linear-gradient(90deg,var(--tcol),var(--pcol),var(--tcol));padding:12px;border:solid var(--scol);border-width:9px 0;box-sizing:border-box}
 .bordr{border:.4em solid var(--scol)}
 .center{display:block}
-.back{font-size:1.5em;margin:9px auto}
+.back{font-size:1.5em;margin:9px auto auto}
 .neon,.neonw{color:var(--pcol);font-size:2em;text-shadow:var(--pcol)0 0 6px;box-shadow:var(--pcol)0 0 8px;background:var(--scol);border:var(--pcol) .15rem solid;text-decoration:none;padding:.1rem;transition:.05s}
 .neon:hover,.neonw:hover{text-shadow:0 0 10px;box-shadow:0 0 20px}.neon:active,.neonw:active{text-shadow:0 0 9px;box-shadow:0 0 16px}
 .neon{text-orientation:upright;writing-mode:vertical-rl;padding:6px 0 4px}
 .neonw{padding:4px 8px}
 .smol{width:clamp(35ch,95%,60ch)}
-.spoiler{color:#0000;background:var(--scol);animation:.2s;overflow:auto;display:inline;user-select:none}
-.spoiler:hover{color:inherit;background:#0000}
+.spoiler{background:var(--scol);transition:.4s;display:inline;background:var((--scol))}
+.spoiler *{opacity:0;transition:.2s}
+.spoiler:hover *,.spoiler:focus *{opacity:1}
+.spoiler:hover,.spoiler:focus{background:#0000}
+/* .showcase .spoiler:has(img){} */
 .flex{display:flex;flex-wrap:wrap;gap:1em 1em;justify-content:space-around;padding:5px}
 
 /* portfolio stuff */
 .showcase{display:flex;flex-wrap:wrap;justify-content:start;gap:1em 1em;padding:.8em}
-.showcase img{outline:0 double var(--accent);transition:.05s,outline-width.15s;object-fit:cover}
+.showcase img{outline:0 double var(--accent);transition:outline-width.15s,opacity.5s;object-fit:cover}
 .showcase img:hover,.showcase img:focus{outline:.5em solid var(--accent);cursor:pointer}
 .showcase img:active{outline-offset:.5em}
 .viewport{height:auto;display:block}
